--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "dotenv-cli": "^6.0.0",
-    "release-it": "^15.5.0",
     "@types/node": "^18.11.18",
+    "dotenv-cli": "^6.0.0",
+    "prettier": "^2.8.7",
+    "release-it": "^15.5.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.9.4"
   },
