chore: update pkg json

--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
   },
   "author": "tanishqmanuja",
   "license": "MIT",
+  "keywords": [
+    "ionic"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
   "devDependencies": {
+    "@release-it/conventional-changelog": "^7.0.2",
     "prettier": "^3.0.3",
     "release-it": "^16.2.1",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "dependencies": {
-    "@release-it/conventional-changelog": "^7.0.2"
   }
 }
